# pico_spdif_recorder

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CmakeLists.txt  LICENSE  README.md  Readme.md  build_docker.sh
.github/actions/set-version/: action.yml  index.js  package-lock.json  package.json
.github/workflows/: build-binaries.yml  upload-release-asset.yml
lib/config_wifi/: CMakeLists.txt  config_wifi.cpp  config_wifi.h
lib/picoConfigParam/: CmakeLists.txt  ConfigParam.cpp  ConfigParam.h
lib/pico_fatfs/: CmakeLists.txt  tf_card.c
lib/pico_fatfs/fatfs/: ff.c  ff.h  ffconf.h  ffsystem.c
lib/pico_fatfs/test/: CMakeLists.txt  main.cpp
lib/pico_fatfs_customized/: CMakeLists.txt  CmakeLists.txt  diskio.h  ff.c  ff.h  tf_card.h  tf_card_override.c  tf_card_override.h
lib/pico_fatfs_customized/R0.14b/: ff.c  ffconf.h  ffsystem.c
lib/pico_fatfs_customized/R0.15/: ff.c  ffsystem.c
lib/pico_fatfs_customized/test/: CMakeLists.txt  main.cpp
lib/pico_ntp_client/: CMakeLists.txt  ntp_client.cpp  ntp_client.h
src/: ConfigParam.cpp  ConfigParam.h  UserFlash.cpp  UserFlash.h  config_wifi.cpp  config_wifi.h  file_cmd.cpp  file_cmd.h  main.cpp  ntp_client.cpp  ntp_client.h  record_wav.cpp  record_wav.h  spdif_rec_wav.cpp  spdif_rec_wav.h  wav_file.cpp  wav_file.h  wav_file_cmd.cpp  wav_file_cmd.h  wav_file_status.cpp  wav_file_status.h  write_wav.cpp  write_wav.h
wav_tagger/: .gitignore  README.md  spotify_metadata_extractor_SKILL.md  wav_tagger.py  wav_to_mp3_converter.py
